Add pre-commit hook to auto-build before commits
- Add scripts/pre-commit hook template
- Add scripts/install-hooks.sh for easy installation
- Add 'bun run setup' command to package.json
- Hook runs build and minify before each commit

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "bun run build.ts",
     "dev": "bun run build.ts --watch",
-    "compare": "bun run scripts/compare.ts"
+    "compare": "bun run scripts/compare.ts",
+    "setup": "bun run scripts/install-hooks.sh"
   },
   "devDependencies": {
     "@types/node": "^20.10.0"
